Third HTML exercise done

--- a/Exercises/1.html
+++ b/Exercises/1.html
@@ -3,7 +3,7 @@
 
 <head lang="en-us">
     <meta charset="UTF-8">
-    <title>CNN Newspaper</title>
+    <title>Exercise 1</title>
 </head>
 
 <body>
@@ -11,16 +11,16 @@
     <header>
         <h1>CNN</h1>
         <h2>International News</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/CNN.svg/1200px-CNN.svg.png" width="100" alt="Logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/CNN.svg/1200px-CNN.svg.png" width="500" alt="Logo">
     </header>
 
     <!-- Menu -->
-    <section>
+    <nav>
         <ul>
             <li><a href="sports.html">Sports</a></li>
             <li><a href="politics.html">Politics</a></li>
         </ul>
-    </section>
+    </nav>
 
     <!-- Body -->
     <article>
@@ -29,11 +29,11 @@
             <strong>London (CNN) –</strong> The number of coronavirus cases in the UK is doubling roughly every seven days, according to the country's chief scientific advisor, Patrick Vallance. If that rate continues to grow unabated, "by mid-October
             you would end up with something like 50,000 per day," which "could lead to 200 deaths a day" by November, Vallance warned at a Monday press briefing.
         </p>
-        <img src="https://cdn.cnn.com/cnnnext/dam/assets/200626091605-covid-brexit-cover-dv-small-169.jpg" alt="Illustration">
+        <img src="https://cdn.cnn.com/cnnnext/dam/assets/200626091605-covid-brexit-cover-dv-small-169.jpg" width="400" alt="Illustration">
 
         <footer>
-            <p>Luke McGee</p>
-            <p>September 21, 2020</p>
+            <p>Author: Luke McGee</p>
+            <time>September 21, 2020</time>
         </footer>
     </article>
 </body>
