--- a/Exercises/2.html
+++ b/Exercises/2.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Table</title>
+    <title>Exercise 2</title>
     <meta charset="UTF-8">
     <style>
         table,
