Re-did HTML third exercise to fix labels and include fieldsets
Also finished fourth exercise and corrected some markup errors on other exercises

--- a/Exercises/HTML/2.html
+++ b/Exercises/HTML/2.html
@@ -4,17 +4,10 @@
 <head>
     <title>Exercise 2</title>
     <meta charset="UTF-8">
-    <style>
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
-    </style>
 </head>
 
 <body>
-    <table>
+    <table border="1">
         <tr>
             <td colspan="2" rowspan="2">Student</td>
             <td colspan="4">Exam</td>
@@ -88,7 +81,7 @@
 
     <p>
         <a href="https://validator.w3.org/check?uri=referer">
-            <img src="https://www.w3.org/Icons/valid-html401" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+        <img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" /></a>
     </p>
 </body>
 
